--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,11 @@
-{}
+{
+    "name": "sanjeevani/backend",
+    "description": "Sanjeevani backend API",
+    "require": {
+        "php": "^8.0",
+        "razorpay/razorpay": "2.*"
+    },
+    "scripts": {
+        "start": "php -S 0.0.0.0:$PORT -t ."
+    }
+}
