--- a/.htaccess
+++ b/.htaccess
@@ -12,6 +12,6 @@ RewriteRule ^(.*)$ $1 [R=200,L]
 php_flag display_errors off
 php_value error_reporting 0
 
-# Force HTTPS
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] 
+# Remove the HTTPS redirect as Render handles this
+# RewriteCond %{HTTPS} off
+# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
